Add geolocation tags (#599)
* Updated 2016-12-1-chiping.md

* Updated 2016-12-12-alterbooth.md

* Updated 2016-12-23-Origis.md

* Updated 2017-02-16-Aegex.md

* Updated 2017-03-10-LisaApp.md

* Updated 2017-03-17-ABUS.md

* Updated 2017-03-29-softplan.md

--- a/_posts/2016-12-1-chiping.md
+++ b/_posts/2016-12-1-chiping.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Chip-ing uses an Azure solution to help keep track of your golf ball while improving your play"
 author: "Ronnie Saurenmann, Sascha Corti"
-author-link: "#"
+#author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-01-13
 categories: [IoT]
@@ -11,6 +11,7 @@ image: "images/chiping/feat_Architecturev1.jpg"
 excerpt: Chip-ing is building a smart, connected golf ball. This article describes the PoC created during a hackfest with Microsoft for acquiring, storing, and analyzing the data captured by the golf ball and the accompanying mobile app.  
 language: [English]
 verticals: [Retail & Consumer Goods]
+geolocation: [Europe]
 ---
 
 Chip-ing is building a smart, connected golf ball. This ball can be located if lost on the course and can provide insight into the player's performance by analyzing and visualizing sensor data directly captured inside the ball.
