--- a/_posts/2017-02-16-Aegex.md
+++ b/_posts/2017-02-16-Aegex.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title:  "Aegex builds a cross-platform app to monitor sensors in hazardous work environments"
+title: "Aegex builds a cross-platform app to monitor sensors in hazardous work environments"
 author: "Kristin Ottofy, Joe Raio, Blain Barton, Dave Voyles, and Tom Ventulett"
-author-link: "#"
+#author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2017-06-05
+date: 2017-06-05
 categories: [Azure App Service, Azure Functions, IoT, Mobile Application Development with Xamarin]
 color: "blue"
 image: "images/Aegex/feat_aegex-iot-device.png"
 excerpt: "Aegex Technologies and Microsoft worked together to build a Xamarin app for viewing device data in hazardous worksites to potentially save lives."
-language: "English"
+language: [English]
 verticals: [Process Mfg & Resources]
+geolocation: [North America]
 ---
 
 Aegex Technologies provides the first Windows 10 tablet that is globally certified as intrinsically safe for use in the most hazardous industrial locations in the world. Together with Microsoft, Aegex built a Xamarin application that customers can use to monitor real-time sensor data from IoT devices. When put into production, Aegex is hopeful this system will attract Fortune 100 customers in oil and gas, mining, and other potentially hazardous industries with the goal of saving lives. 
