--- a/_posts/2016-12-23-Origis.md
+++ b/_posts/2016-12-23-Origis.md
@@ -11,6 +11,7 @@ image: "images/Origis/feat_img07.jpg"
 excerpt: Microsoft teamed up with Origis to create a mobile app and device that enables elderly pharmacy clients to receive their prescriptions and medical supplies at home.
 language: [English]
 verticals: [Health]
+geolocation: [Central America and the Caribbean]
 ---
 
 This case study discusses how we developed a mobile application and a customized device to make it easier for elderly patients in Mexico to order and receive their prescriptions and other medical supplies at home.
