--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -1,19 +1,18 @@
 ---
 layout: post
-title: "Using CaaP to enhance on-site inspection"
+title: "Using CaaP and André, the voice-driven assistant bot, to enhance on-site inspection"
 author: "Pedro Dias and Anders Gill"
 #author-link: "#"
 #author-image: "../images/powel/pedrodias.jpg"
-date: 2017-06-07
+date: 2017-06-09
 categories: Bot
 color: "blue"
+image: "images/powel/CaaP/fieldengineer_thumb.png"
 excerpt: During a hackfest with Microsoft, Powel implemented a solution to help technical staff perform hands-free inspection of electrical grids in Norway.
 language: [English]
 verticals: [Power & Utilities]
 geolocation: [Europe]
 ---
-
-# Meet André, the voice-driven assistant Bot!
 
 During March 2017 at Microsoft offices in Lysaker, Norway, Microsoft teamed up with Powel to create a brand-new bot named André. 
 The aim of the hackfest was to create a voice-driven chatbot that could assist field engineers within the space of electrical grids to answer questions and provide reporting capabilities during inspections to free up their hands. The solution was built using tools from Microsoft leveraging chatbots and conversations as a platform (CaaP) technologies.
