Added link to blog under AR

--- a/_posts/2017-04-19-e-pity.md
+++ b/_posts/2017-04-19-e-pity.md
@@ -277,3 +277,4 @@ This process proved that doing such a conversion can be beneficial for the compa
 - [e-pity in the Windows Store](https://www.microsoft.com/store/apps/9pb8gn64w3gp)
 - [e-pity website](https://www.e-pity.pl/pobierz_darmowy_program/)
 - [e-file website](http://www.e-file.pl/en/)
+- [Blog on e-file site announcing this case study (in Polish)](http://www.e-file.pl/news/2017/case-study--epity-2016-w-sklepie-windows/)
