--- a/_posts/2017-03-27-Three.md
+++ b/_posts/2017-03-27-Three.md
@@ -80,17 +80,17 @@ The final solution in the hackfest was a chatbot that:
 - Enables users to upgrade or cancel their contract with Three.
 - Tracks telemetry of all the dialogs using Azure Application Insights, which will later be used for feedback into the bot for conversational flow/UX improvements.
 
-![Main Menu]({{ site.baseurl }}/images/Three/mainmenu.png)
+<img alt="Main Menu" src="{{ site.baseurl }}/images/Three/mainmenu.png" width="600">
 
-![Activate SIM Flow]({{ site.baseurl }}/images/Three/activatesim1.png)
+<img alt="Activate SIM Flow" src="{{ site.baseurl }}/images/Three/activatesim1.png" width="600">
 
-![Activate SIM Flow]({{ site.baseurl }}/images/Three/activatesim2.png)
+<img alt="Activate SIM Flow" src="{{ site.baseurl }}/images/Three/activatesim2.png" width="600">
 
-![Port Number Flow]({{ site.baseurl }}/images/Three/portnumber.png)
+<img alt="Port Number Flow" src="{{ site.baseurl }}/images/Three/portnumber.png" width="600">
 
-![Upgrade Flow]({{ site.baseurl }}/images/Three/upgrade.png)
+<img alt="Upgrade Flow" src="{{ site.baseurl }}/images/Three/upgrade.png" width="600">
 
-![Cancel Flow]({{ site.baseurl }}/images/Three/cancel-pac.png)
+<img alt="Cancel Flow" src="{{ site.baseurl }}/images/Three/cancel-pac.png" width="600">
 
 
 The bot starts off with a welcome message that is triggered when a user adds a bot to their contacts or opens a conversation with the bot. From here the user can: 
@@ -153,8 +153,7 @@ builder.Prompts.choice(
 
 <br/>
 
-![Activate SIM]({{ site.baseurl }}/images/Three/activatesim1.png)
-
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/activatesim1.png" width="600">
 
 **ActivateSIMForm**
 
@@ -215,8 +214,7 @@ function (session, results, next) {
 
 <br/>
 
-![Activate SIM]({{ site.baseurl }}/images/Three/activatesim2.png)
-
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/activatesim2.png" width="600">
 
 **CommonFormIntro**
 
@@ -233,17 +231,16 @@ session.send(requirements);
 
 <br/>
 
-![Activate SIM]({{ site.baseurl }}/images/Three/activatesim3.png)
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/activatesim3.png" width="600">
 
-
-![Activate SIM]({{ site.baseurl }}/images/Three/activatesim4.png)
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/activatesim4.png" width="600">
 
 
 **ActivateSIMSubmit**
 
 This dialog is called once the ```ActivateSIMForm``` is completed, and submits the form to Three using `request` to complete a REST POST call to the Three API. The image below displays what the user sees after successfully submitting a form.
 
-![Activate SIM]({{ site.baseurl }}/images/Three/activatesim5.png)
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/activatesim5.png" width="600">
 
 
 #### Port a number
@@ -285,7 +282,7 @@ function (session, results) {
 
 <br/>
 
-![Activate SIM]({{ site.baseurl }}/images/Three/portnumber.png)
+<img alt="Activate SIM" src="{{ site.baseurl }}/images/Three/portnumber.png" width="600">
 
 
 #### Cancel or upgrade
@@ -300,24 +297,21 @@ This flow contains three dialogs:
 
 This dialog simply asks users whether they want to upgrade or cancel and then calls the relevant dialog depending on the user's choice. This is implemented using a choice prompt.
 
-![Upgrade or Cancel]({{ site.baseurl }}/images/Three/upgradeorcancel.png)
-
+<img alt="Upgrade or Cancel" src="{{ site.baseurl }}/images/Three/upgradeorcancel.png" width="600">
 
 **Cancel**
 
 This asks the users, using a choice prompt, whether they want a PAC code or to know the end date of their contract. Depending on the response, it replies with the phone number to call or the website they need to navigate to.
 
-![Cancel Date]({{ site.baseurl }}/images/Three/cancel-date.png)
+<img alt="Cancel Date" src="{{ site.baseurl }}/images/Three/cancel-date.png" width="600">
 
-
-![Cancel PAC]({{ site.baseurl }}/images/Three/cancel-pac.png)
-
+<img alt="Cancel PAC" src="{{ site.baseurl }}/images/Three/cancel-pac.png" width="600">
 
 **Upgrade**
 
 This dialog does the same as the 'cancel' dialog. It asks for the type of contract and then, depending on the answer, it gives the user the website they need in order to upgrade.
 
-![Upgrade]({{ site.baseurl }}/images/Three/upgrade.png)
+<img alt="Upgrade" src="{{ site.baseurl }}/images/Three/upgrade.png" width="600">
 
 
 ### Bot intelligence ### 
@@ -363,7 +357,7 @@ For example, if the user says: "I want to activate my SIM card," LUIS would pick
 
 You can easily learn how to make your own LUIS model at the [LUIS website](http://luis.ai).
 
-![Trigger QnA]({{ site.baseurl }}/images/Three/free-text-luis.png)
+<img alt="Trigger QnA" src="{{ site.baseurl }}/images/Three/free-text-luis.png" width="600">
 
 
 #### QnA Maker
@@ -432,7 +426,7 @@ function (session, results, next) {
 
 <br/>
 
-![Trigger QnA]({{ site.baseurl }}/images/Three/free-text-qna.png)
+<img alt="Trigger QnA" src="{{ site.baseurl }}/images/Three/free-text-qna.png" width="600">
 
 
 ### Azure Application Insights  
