Add CTAs to IoT case studies (#630)
* Updated 2016-11-24-BlueDynamic.md

Added CTAs

* Updated 2016-10-11-CrokePark.md

Added CTAs

* Updated 2016-09-26-en-EDP.md

Added CTAs

* Updated 2016-11-22-nexcom.md

Added CTAs

* Updated 2016-10-18-TyreExpress.md

Added CTAs

* Updated 2016-12-06-BeijerAutomotiveHackfest.md

Added CTAs

* Updated 2016-12-08-CIMTOPS.md

Added CTAs

* Updated 2016-10-28-en-GeratrizComOn.md

Added CTAs

* Updated 2016-12-02-GTI-Smart-City.md

Added CTAs

* Updated 2016-12-12-transnet.md

Added CTAs

* Updated 2016-12-12-PolimiMitreo.md

Added CTAs

* Updated 2016-10-24-quarta.md

Added CTAs

* Updated 2016-10-07-SkyAlert_English-Version.md

Added CTAs

--- a/_posts/2016-09-26-en-EDP.md
+++ b/_posts/2016-09-26-en-EDP.md
@@ -4,7 +4,7 @@ title: "EDP and Microsoft prepare for a public hackathon to create a smart meter
 author: "João Almeida"
 author-link: "http://github.com/joalmeid"
 #author-image: "{{ site.baseurl }}/images/edp/edp01.png"
-date: 2017-01-05
+date: 2017-06-14
 categories: [IoT]
 color: "blue"
 image: "images/edp/feat_edp02.png"
@@ -12,10 +12,10 @@ excerpt: EDP, a leading energy producer in Portugal, wants to challenge startups
 language: [English]
 verticals: [Power & Utilities]
 geolocation: [Europe]
-#permalink: /<page-title>.html
+permalink: /iot/2017/01/05/en-EDP.html
 ---
 
-*This report was updated on March 5, 2017, to include the results of the EDP IoT Hackathon.*
+*Updated to include results of the EDP IoT hackathon and additional resources*
 
 We live in an age of innovation in the energy sector. Renewable energy has been growing significantly over the last decade and **EDP**, the leading producer, distributor, and supplier of electricity in Portugal, has been an early promoter of the clean energy revolution. The integration of IT and communication technologies with the secular distribution grid, resulting in the complex infrastructure commonly known as *smart grid*, has been key to allowing the growth of renewable energy and to maximizing the potential for energy efficiency. 
 
@@ -27,7 +27,7 @@ EDP decided the best approach to address the challenge would be through a hackat
 
 ## Customer profile ##
 
-![EDP Logo]({{ site.baseurl }}/images/edp/edp02.png "EDP Logo")
+![EDP logo]({{ site.baseurl }}/images/edp/edp02.png "EDP Logo")
 
 
 [EDP – Energias de Portugal, S.A.](http://www.edp.pt/en/Pages/homepage.aspx) is the largest generator, distributor, and supplier of electricity in Portugal, with significant operations in electricity and gas in Spain as well. EDP is the third-largest electricity-generating company and one of the largest gas distributors on the Iberian Peninsula.
@@ -380,9 +380,9 @@ For EDP this initiative is transformative since it bets on a totally different e
 
 In this case, the focus of these efforts closely connected to EDP's core business—energy and residential space.
 
-> *["The hackathon has become one of the latest vogue terms in business"](http://www.mckinsey.com/business-functions/digital-mckinsey/our-insights/demystifying-the-hackathon)*
+> ["The hackathon has become one of the latest vogue terms in business"](http://www.mckinsey.com/business-functions/digital-mckinsey/our-insights/demystifying-the-hackathon)
 
-> -Ferry Grijpink, principal at McKinsey, Singapore
+> —Ferry Grijpink, principal at McKinsey, Singapore
 
 With the results of the EDP IoT Hackathon, a set of new scenarios is expected within the context of remote monitoring solutions including *real time* aspects while integrating with the EDP Box. Strategically, EDP's vision includes reaching a final solution that allows companies/startups to go to market with products easily integrated with the EDP Box. Ideally, there's the possibility of developing applications based on economically viable hardware. Also possible is that the community and developers will create energy-monitoring solutions. This open source approach may be an important engine for the IoT proliferation within EDP. In the end, the result will help EDP customers to control their energy consumption.
 
@@ -404,19 +404,24 @@ The **[EDP IoT Hackathon](http://edpiothackathon.edp.pt/)** took place between *
 
 The eight final teams had the opportunity to pitch and present their projects in the closing event. The best projects were awarded with prizes and possible incubation within EDP Starter. Here are the projects: 
 
-**1<sup>st</sup>, Crowd2Data** - **Joana Albuquerque**, **Nuno Santos**, **Rafael Evaristo**
+**1<sup>st</sup>, Crowd2Data** – **Joana Albuquerque**, **Nuno Santos**, **Rafael Evaristo**
 
 Their objective was to create two devices: a first one that is next to the EDP smart meter, collects energy consumption readings and sends the values via SIGFOX. Additionally, this equipment also allows the reading via Bluetooth through an app exclusive to EDP technical personnel. The second device, installed inside the house of the EDP customer, collects temperature data of humidity and presence and relates them to the energy consumption of the house. Their plan was to create a technological open foundation to be installed within residential houses, promoting innovation and allowing integration with other devices that implement this open protocol of communication and integration. As an end goal, other devices/brands could build their solutions using this technological hub. The work went on to construct the code so that the Akeru board could read from the EDP smart meter and send the consumption data to Azure using SIGFOX. For this they used the event hub, integrated with a REST endpoint called by an Azure function. They created an Android app and a web interface using the Web Apps feature of Azure App Service with an Azure SQL database. This way they could index service costs to energy usage, without having to pay infrastructure fixed costs. They fostered a true pay-as-you-go model into an energy consumption model.
 
-**2<sup>nd</sup>, iThings/NESTO** - **Marcelo Lopes**, **Michaël Memeteau**
+**2<sup>nd</sup>, iThings/NESTO** – **Marcelo Lopes**, **Michaël Memeteau**
 
 Focused on EDP’s customer satisfaction with a solution bringing high added value. The hardware used ARM® architecture (32 bits Cortex®-M0 +) and unique chip for encryption. In addition to open source tools such as InfluxDB, Grafana, and Linux, powerful Azure services (IoT Hub, Stream Analytics, Azure Functions, Web Apps, SQL, Virtual Machines, Bing Maps and Power BI) were used to bring the project to life. The final result allows EDP’s customers to track their detailed consumption and get notifications (SMS/push) for devices left turned on at home. The team plans to evolve the project using Azure Machine Learning to perform non-intrusive load monitoring (NILM).
 
 ![iThings/NESTO]({{ site.baseurl }}/images/edp/edp34.png)
 
-**3<sup>rd</sup>, Innowave/Thought Creator** - **João Amaro**, **José Araujo**, **Pedro Moscoso**, **Rafael Pires**
+**3<sup>rd</sup>, Innowave/Thought Creator** – **João Amaro**, **José Araujo**, **Pedro Moscoso**, **Rafael Pires**
 
 The system used the Azure platform as a service (PaaS) to handle the reception and management of SIGFOX messages from the smart meter. Those messages contained all the information needed to create a real-time dashboard that provides not only information to the EDP client but also technical energy indicators. On top of that, a gamification engine was created to give “energy points” to the clients who manage their energy consumption patterns through the application. Those points could later be exchanged in the EDP partners network.
 
+## Additional resources
 
-
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
