--- a/_posts/2016-10-24-quarta.md
+++ b/_posts/2016-10-24-quarta.md
@@ -12,7 +12,6 @@ excerpt: Microsoft joined Quarta Technologies and TechnoKom in a hackfest to dev
 language: [English]
 verticals: [Logistics]
 geolocation: [Europe]
-#permalink: /<page-title>.html
 ---
 
 Microsoft joined Quarta Technologies and TechnoKom in a hackfest to develop the IoT gateway for a TechnoKom solution, used as the transport layer for iQFreeze.
@@ -20,9 +19,7 @@ Microsoft joined Quarta Technologies and TechnoKom in a hackfest to develop the 
 In this report, we describe the process and what we did before and during the hackfest, including:
 
 -   How we created a base prototype of software as a service (SaaS)-ready architecture for the iQFreeze solution.
-
 -   How to achieve a working prototype of a SaaS-ready IoT solution within a few hours using IoT Hub and Azure.
-
 -   Learnings and architecture questions from the process.
 
 ## Customer profile ##
@@ -54,13 +51,10 @@ problem and provide a new way to market and sell the product.
 
 The hack team consisted of two groups:
 
-- **Development:** 
-
+- **Development** 
 	-   Two TechnoKom developers
 	-   Alex Belotserkovskiy, Microsoft, Technical Evangelist
-
-- **Business and planning:** 
-
+- **Business and planning** 
 	-   Kirill Konyagin, Quarta, Director of Business Development
 	-   Victor Kiselev, Microsoft, Partner Business Evangelist
 
@@ -100,15 +94,10 @@ Stream Analytics =&gt; Storage, Machine Learning and SQL Azure)—in five hours.
 We had five hours and three developers to build a working prototype of a SaaS-ready IoT solution using IoT Hub and Azure. Our six tasks:
 
 -   Assess the original architecture and propose a new base Azure PaaS-based architecture.
-
 -   Implement the test gateway (console app) as a proof of concept.
-
 -   Assess the possible options to implement it as the cloud gateway (for example, to use Azure IoT Gateway, or Cloud Services, and so on).
-
 -   Migrate the gateway to the cloud.
-
 -   Develop the code to connect the gateway with the data pipeline.
-
 -   Equip the prototype with the monitoring suite (Application Insights).
 
 First, we discussed how to decouple the monolithic approach into the
@@ -189,15 +178,10 @@ take up to 10 minutes each time.
 We divided the task of implementing the IoT gateway into subtasks:
 
 -   Gateway listens to the TCP port.
-
 -   Gateway establishes the connection with the device.
-
 -   Gateway gets the stream from the device.
-
 -   Gateway sends the ACK packet back.
-
 -   Gateway parses the protocol.
-
 -   Gateway sends data to the IoT Hub.
 
 Although nothing is new or innovative in
@@ -248,7 +232,7 @@ not guarantee your data will survive.
 We had some spare time to test it, and it worked. The code is
 pretty simple.
 
-<pre> const string azureLocalResourceNameFromServiceDefinition = "LocalStorage1";
+<pre>const string azureLocalResourceNameFromServiceDefinition = "LocalStorage1";
 
 var azureLocalResource = RoleEnvironment.GetLocalResource(azureLocalResourceNameFromServiceDefinition);
 
@@ -351,10 +335,8 @@ We are grateful to the TechnoKom and Quarta teams for many reasons:
 
 - They were eager to rearchitect the solution and make it more
     cloud-friendly.
-
 - There was a lot of discussion on how to improve both their solutions and
     Microsoft—we were able to gather some technical feedback.
-
 - Their spirit is awesome.
 
 The solution is not completely ready for
@@ -364,3 +346,11 @@ foundation for our further development—to test the solution with Azure Service
 Machine Learning component and gather insights from the data. We
 decided to "go and fail fast" and, as we learned, we did not fail in any
 aspect.
+
+## Additional resources
+
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
