--- a/_posts/2016-11-22-nexcom.md
+++ b/_posts/2016-11-22-nexcom.md
@@ -4,7 +4,7 @@ title: "With Industry 4.0 in mind, NEXCOM implements a smart gateway IoT solutio
 author: "Herman Wu"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date: 2016-12-06
+date: 2017-06-14
 categories: [IoT]
 color: "blue"
 image: "images/feat_NEXCOM_ScreenShotPortal1.1.jpg"
@@ -12,9 +12,11 @@ excerpt: NEXCOM is looking to adopt IoT technologies and undergo a digital trans
 language: [English]
 verticals: [Power & Utilities, Discrete Manufacturing]
 geolocation: [Asia]
-#permalink: /<page-title>.html
+permalink: /iot/2016/12/06/nexcom.html
 sticky: true
 ---
+
+*Updated with additional resources*
 
 In the era of [Industry 4.0](https://enterprise.microsoft.com/en-us/industries/discrete-manufacturing/whats-new-with-industry-4-0-takeaways-from-hannover-messe-2016/), NEXCOM is looking to adopt IoT technologies and undergo a digital transformation. They decided to work with Microsoft to bring more connectivity and intelligent capability to their products. The Microsoft Taiwan DX team and NEXCOM worked together to ease the adoption of an Azure IoT solution and resolve any technical issues in the journey.     
 
@@ -293,3 +295,11 @@ NEXCOM products are used in facilities and factories worldwide. With NEXCOM's in
 Without the great teamwork between NEXCOM and Microsoft, it would not have been possible to achieve this result. 
 
 ![NEXCOM Smart Gateway solution team discussion]({{ site.baseurl }}/images/NEXCOM_DiscussA.jpg "NEXCOM Smart Gateway solution team discussion ")
+
+## Additional resources
+
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
