--- a/_posts/2016-12-08-CIMTOPS.md
+++ b/_posts/2016-12-08-CIMTOPS.md
@@ -12,7 +12,6 @@ excerpt: Microsoft worked with CIMTOPS to create a IoT solution that remotely mo
 language: [English]
 verticals: [Process Mfg & Resources, Discrete Manufacturing]
 geolocation: [Asia]
-#permalink: /<page-title>.html
 sticky: true
 ---
 
@@ -38,7 +37,7 @@ The following technologies are used in the solution:
 The roles that took part in the architecture discussion and hackfest were as follows:
 
 - Director, CIMTOPS Cloud & Device App
-- Naoki Sato[@naokis](http://blogs.msdn.microsoft.com/naokis) – Technical Evangelist, Microsoft Japan
+- Naoki Sato ([@naokis](http://blogs.msdn.microsoft.com/naokis)) – Technical Evangelist, Microsoft Japan
 - Tatsuro Hisamori – Technical Evangelist, Microsoft Japan
 
 ## Customer profile ##
@@ -131,3 +130,11 @@ Switching from on-premises to the cloud, CIMTOPS will be able to monitor NC mach
 Here is a quote from the customer:
 
 > "Architecture discussion and hackfest drives our products development. Running on Microsoft Azure services, MC-Web CONTROLLER can help customers improve operational efficiency, reduce costs, and improve profitability."
+
+## Additional resources
+
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
