--- a/_posts/2016-12-12-transnet.md
+++ b/_posts/2016-12-12-transnet.md
@@ -12,7 +12,6 @@ excerpt: Transnet delivers thousands of tons of goods across South Africa. It ai
 language: [English]
 verticals: [Logistics]
 geolocation: [Africa]
-#permalink: /<page-title>.html
 sticky: true
 ---
 
@@ -22,7 +21,7 @@ sticky: true
             <img src='{{ site.baseurl }}/images/Transnet/Transnet.jpg' width='200px'/>
         </td>
         <td style='font-size: 16px'>
-            Transnet Research Locomotive Optimization Engagement - DevOps and IoT
+            Transnet Research Locomotive Optimization Engagement – DevOps and IoT
         </td>
         <td>
             <img src='{{ site.baseurl }}/images/Transnet/TranEngineering.jpg' width='200px'/>
@@ -37,11 +36,11 @@ The Transnet team is composed of a diverse group of researchers and engineers fa
 This engagement was executed as an example of DevOps structure while delivering the IoT-based solution. A value stream mapping exercise
 detailed the existing developer operations process and identified gaps. The gaps were prioritized and various solutions were selected to be addressed.
 
-![VSM]({{ site.baseurl }}/images/Transnet/Value-Stream-Mapping.png)
+![Value stream mapping]({{ site.baseurl }}/images/Transnet/Value-Stream-Mapping.png)
 
 The IoT portion of the project focused on real-time monitoring of train status and predictive maintenance. 
 
-**Technologies used:**
+**Technologies used**
 
 - Visual Studio Team Services
   - Scrum methodology
@@ -62,7 +61,7 @@ The IoT portion of the project focused on real-time monitoring of train status a
 - ARMKeil µVision® IDE
 - Python
 
-**The team:**
+**The team**
 
 <table>
     <tr><td>Company</td><td>Name</td><td>Role</td></tr>
@@ -163,7 +162,7 @@ days to go from a requirement surfacing to production. The team worked together 
 the value stream map as well as identify gaps in the process that could be
 addressed.
 
-![VSM]({{ site.baseurl }}/images/Transnet/initialvsm.png)
+![Value stream mapping]({{ site.baseurl }}/images/Transnet/initialvsm.png)
 
 The largest cause of delay in the project is the amount of manual processes and email communications.
 The value stream map helped us identify the following points for which we could help reduce lead time:
@@ -569,26 +568,34 @@ At the time we concluded our work with the Transnet team, we had successfully
 implemented an end-to-end DevOps process from scratch and produced the ground
 work for their IoT solution.
 
-> *I would like to thank you and your team for choosing us for the deep technical engagement.
+> I would like to thank you and your team for choosing us for the deep technical engagement.
 It was truly remarkable. The team is excited and looking forward to delivering
 more value to our stakeholders in shorter periods of time. The greater impact
 was also when the team learned valuable insights about Visual Studio. We have
 already configured sprints for one of our major projects and we'll be ready to
-execute fully in the New Year.*
+execute fully in the New Year.
 
-> *The practical hands-on approach of the program is the most useful and valuable
+> The practical hands-on approach of the program is the most useful and valuable
 part. This is because you are embedded in the team's environment and can easily
 understand how they do things. This is not your typical consulting or academic
 approach, this was well received by engineers who are normally super skeptical
-of buzzwords and fads.*
+of buzzwords and fads.
 
-> *Well done for spotting that the team is stretched thin with the multiple
+> Well done for spotting that the team is stretched thin with the multiple
 projects that they are all involved in. I have already restructured the project
 allocations of all members. The impact of this program has already yielded
 results and I am sure it will continue to yield some more as we get the hang of
-it.*
+it.
 
->*Thanks to you, Dave, and your team—you guys are gifted in working well with
-people. I am looking forward to more engagements with you.* 
+> Thanks to you, Dave, and your team—you guys are gifted in working well with
+people. I am looking forward to more engagements with you.
 
-> *—Moses Matsepane* 
+> —Moses Matsepane
+
+## Additional resources
+
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
