Add CTAs to more IoT case studies (#648)
* Updated 2016-08-24-IoT-template.md

Added CTAs to Additional Resources

* Updated 2016-11-22-FagorEderlan.md

Added CTAs to Additional Resources

* Updated 2016-11-21-IoT-ZionChina.md

Added CTAs in Additional Resources

* Updated 2017-01-03-ZPMC.md

Added CTAs in Additional Resources

* Updated 2016-11-24-BlueDynamic.md

Updated CTA for TCC

* Updated 2016-10-11-CrokePark.md

Updated CTA for TCC

* Updated 2016-09-26-en-EDP.md

Updated CTA for TCC

* Updated 2016-11-22-nexcom.md

Updated CTA for TCC

* Updated 2016-10-18-TyreExpress.md

Updated CTA for TCC

* Updated 2016-12-06-BeijerAutomotiveHackfest.md

Updated CTA for TCC

* Updated 2016-12-08-CIMTOPS.md

Updated CTA for TCC

* Updated 2016-10-28-en-GeratrizComOn.md

Updated CTA for TCC

* Updated 2016-12-02-GTI-Smart-City.md

Updated CTA for TCC; moved Additional Resources

* Updated 2016-12-12-transnet.md

Updated CTA for TCC

* Updated 2016-12-12-PolimiMitreo.md

Updated CTA for TCC

* Updated 2016-10-24-quarta.md

Updated CTA for TCC

* Updated 2016-10-07-SkyAlert_English-Version.md

Updated CTA for TCC

--- a/_posts/2016-12-08-CIMTOPS.md
+++ b/_posts/2016-12-08-CIMTOPS.md
@@ -3,7 +3,6 @@ layout: post
 title: "CIMTOPS uses sensors and Azure IoT Hub to monitor NC machine tools"
 author: "Naoki Sato"
 author-link: "http://blogs.msdn.microsoft.com/naokis"
-#author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-03-15
 categories: [IoT]
 color: "blue"
@@ -136,5 +135,5 @@ Here is a quote from the customer:
 - Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
 - Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
 - Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
-- Check out a curated collection of IoT learning resources (novice to expert): [Microsoft/TechnicalCommunityContent](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
 - Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
