--- a/_posts/2017-01-03-ZPMC.md
+++ b/_posts/2017-01-03-ZPMC.md
@@ -493,3 +493,11 @@ Special thanks to Michael SH Chi, Software Development Engineer in Taiwan, for h
 The work in this project will help ZPMC not only get returns immediately but also build a solid foundation for their core competence in the long run. Reports from multiple machines and even ports can be easily generated, which saves operation workload and cost. And being able to collect real-time data from any machine in any port unlocks the next stage for ZPMC: building their predictive-maintenance capability, which can lead the port-machinery industry to the next level.     
 
 Leveraging the intelligent cloud capabilities of Azure services, ZPMC is now on the fast track of digital transformation, which will help them maintain their global leadership in port-machinery servicing.
+
+## Additional resources
+
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
