--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -4,8 +4,8 @@ title: "Using CaaP and André, the voice-driven assistant bot, to enhance on-sit
 author: "Pedro Dias and Anders Gill"
 #author-link: "#"
 #author-image: "../images/powel/pedrodias.jpg"
-date: 2017-06-09
-categories: Bot
+date: 2017-06-19
+categories: [Bot Framework]
 color: "blue"
 image: "images/powel/CaaP/fieldengineer_thumb.png"
 excerpt: During a hackfest with Microsoft, Powel implemented a solution to help technical staff perform hands-free inspection of electrical grids in Norway.
