--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -12,6 +12,7 @@ excerpt: During a hackfest with Microsoft, Powel implemented a solution to help 
 language: [English]
 verticals: [Power & Utilities]
 geolocation: [Europe]
+published: false
 ---
 
 During March 2017 at Microsoft offices in Lysaker, Norway, Microsoft teamed up with Powel to create a brand-new bot named André. 
