Update IoT CTA links (#656)
* Updated 2016-11-24-BlueDynamic.md

Updated CTAs

* Updated 2016-10-11-CrokePark.md

Updated CTAs

* Updated 2016-09-26-en-EDP.md

Updated CTAs

* Updated 2016-11-22-nexcom.md

Updated CTAs

* Updated 2016-10-18-TyreExpress.md

Updated CTAs

* Updated 2016-12-06-BeijerAutomotiveHackfest.md

Updated CTAs

* Updated 2016-12-08-CIMTOPS.md

Updated CTAs

* Updated 2016-10-28-en-GeratrizComOn.md

Updated CTAs

* Updated 2016-12-02-GTI-Smart-City.md

Updated CTAs

* Updated 2016-12-12-transnet.md

Updated CTAs

* Updated 2016-12-12-PolimiMitreo.md

Updated CTAs

* Updated 2016-10-24-quarta.md

Updated CTAs

* Updated 2016-10-07-SkyAlert_English-Version.md

Updated CTAs

* Updated 2016-11-22-FagorEderlan.md

Updated CTAs

* Updated 2016-11-21-IoT-ZionChina.md

Updated CTAs

* Updated 2017-01-03-ZPMC.md

Updated CTAs

--- a/_posts/2016-10-24-quarta.md
+++ b/_posts/2016-10-24-quarta.md
@@ -348,8 +348,8 @@ aspect.
 
 ## Additional resources
 
-- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
-- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
-- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
-- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
-- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/)
+- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured) (like this one)
