--- a/_posts/2017-01-03-ZPMC.md
+++ b/_posts/2017-01-03-ZPMC.md
@@ -2,7 +2,6 @@
 layout: post
 title: "Azure IoT launches evolution of ZPMC port-machinery business"
 author: "Warren Zhou"
-author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-02-15
 categories: [IoT]
@@ -12,7 +11,6 @@ excerpt: Microsoft and ZPMC teamed up to bring the ZPMC port-machinery business 
 verticals: [Discrete Manufacturing]
 language: [English]
 geolocation: [Asia]
-#permalink: /<page-title>.html
 ---
 
 Shanghai-based ZPMC manufactures heavy-duty equipment that enables modern shipping. That equipment is a major source of real-time data, which needs to be retrieved, monitored, and analyzed. Microsoft Azure IoT Suite is helping ZPMC transform its business from traditional manufacturing to comprehensive service provider.
@@ -496,8 +494,8 @@ Leveraging the intelligent cloud capabilities of Azure services, ZPMC is now on 
 
 ## Additional resources
 
-- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/?wt.mc_id=dx_883174)
-- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
-- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
-- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
-- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
+- Explore [Azure IoT Hub documentation](https://docs.microsoft.com/en-us/azure/iot-hub/)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/)
+- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured) (like this one)
